--- a/2020_21/CAT/notes/notes.tex
+++ b/2020_21/CAT/notes/notes.tex
@@ -870,7 +870,7 @@
     \begin{align*}
         D:\cat J \to \cat C.
     \end{align*}
-    For all objects $j\in\cat J$ we write $D_j:=D(j)$ and for all arrows
+    For all objects $j\in\cat J$ we write $D_j\coloneqq D(j)$ and for all arrows
     $\alpha:i\to j\in\cat J$ we write
     \begin{align*}
         D_\alpha = D(\alpha):D_i\to D_j.
@@ -1094,7 +1094,7 @@
     terms.
 \end{definition}
 
-\begin{definition}[Awodey p. 139]
+\begin{definition}[Awodey p. 138]
     A \emph{model} of a theory $\mathcal{L}$ in a category $\cat C$
     is an assignment of the types and terms of $\mathcal{L}$ to objects
     and arrows of $\cat C$:
@@ -1117,7 +1117,7 @@
     \end{align*}
 \end{definition}
 
-\begin{proposition}
+\begin{proposition}[Awodey p. 139]
     For any theory $\mathcal{L}$ in the $\lambda$-calculus, one has the
     following:
     \begin{enumerate}
@@ -1125,6 +1125,92 @@
             for all models $M$ in CCCs, $[\![a]\!]_M=[\![b]\!]_M$.
         \item Moreover, for any type $A$, there is a closed $t:A$ iff for all models $M$ in CCCs, there is an arrow $1\to\eqc{A}_M$. 
     \end{enumerate}
+\end{proposition}
+
+\subsection{Variable sets}
+
+\begin{definition}
+    Let $I$ be a poset. Then for each $i\in I$ we define 
+    the upper set above $i$ as
+    \begin{align*}
+        \uparrow(i) = \{j\in I : i\leq j\}
+    \end{align*}
+    and the lower set below $i$ as
+    \begin{align*}
+        \downarrow(i) = \{j\in I : j\leq i\}.
+    \end{align*}
+\end{definition}
+
+\begin{definition}[Kripke model]
+    A \emph{Kripke model} of a language $\mathcal{L}$ involving $\top$,
+    $p\wedge q$, $p\Rightarrow q$, and variables consists of a poset $I$
+    of possible worlds, which we write $i\leq j$, together with a relation
+    between worlds $i$ and propositions $p$,
+    \begin{align*}
+        i\Vdash p,
+    \end{align*}    
+    read "$p$ holds at $i$". This relation is assumed to satisfy the
+    following conditions:
+    \begin{enumerate}[label=(\arabic*)]
+        \item $i\Vdash p$ and $i\leq j$ implies $j\Vdash p$
+        \item $i\Vdash\top$
+        \item $i\Vdash p\wedge q$ iff $i\Vdash p$ and $j\Vdash q$
+        \item $i\Vdash p\Rightarrow q$ iff $j\Vdash p$ implies $j\Vdash p$ for all $j\geq i$.
+    \end{enumerate}
+    One then sets
+    \begin{align*}
+        I\Vdash p\hs\text{iff}\hs i\Vdash p\hs\text{for all $i\in I$}.
+    \end{align*}
+\end{definition}
+
+\begin{theorem}[Kripke completeness for IPC; Awodey p. 140]
+   A propositional formula $p$ is provable from the rules for IPC
+   iff it holds in all Kripke models, that is, iff $I\Vdash p$ for all
+   reations $\Vdash$ over all posets $I$,
+   \begin{align*}
+       \text{IPC}\vdash p \hs\text{iff}\hs I\Vdash p\hs\text{for all $I$}.
+   \end{align*} 
+\end{theorem}
+
+\begin{proposition}
+    For every poset CCC $\cat A$, there is a poset $I$ and an injective,
+    monotone map,
+    \begin{align*}
+        y : \cat A \mono \cat 2^I,
+    \end{align*}
+    preserving CCC structure.
+\end{proposition}
+
+\begin{definition}
+    Given a poset $I$, an \emph{$I$-indexed set} is a family of sets
+    $(A_i)_{i\in I}$ together with transition functions $\alpha_{ij}:
+    A_i\to A_j$ for each $i\leq j$, satisfying the compatibility
+    conditions:
+    \begin{itemize}
+        \item $\alpha_{ik}=\alpha_{jk}\circ\alpha_{ij}$ whenever $i\leq j\leq k$,
+        \item $\alpha_{ii}=1_{A_i}$ for all $i$.
+    \end{itemize}
+\end{definition}
+
+\begin{proposition}[Awodey p. 143]
+    For any poset $I$, the category $\cat{Sets}^I$ of $I$-indexed sets
+    and functions is cartesian closed.    
+\end{proposition}
+
+\begin{definition}[Awodey p. 144]
+    A \emph{Kripke model} of a theory $\mathcal{L}$ in the $\lambda$-calculus
+    is a model in a cartesian closed category of the form $\cat{Sets}^I$
+    for a poset $I$.
+\end{definition}
+
+\begin{proposition}[Awodey p. 144]
+    For every CCC $\cat C$, there is a poset $I$ and a functor,
+    \begin{align*}
+        y : \cat C \mono \cat{Sets}^I,
+    \end{align*} 
+    that is injective on both objects and arrows and preserves CCC structure.
+    Moreover, every map between objects in the image of $y$ is itself in the
+    image of $y$.
 \end{proposition}
 
 \end{document}
