CAT: Fixed upper and lower sets

--- a/2020_21/CAT/notes/notes.tex
+++ b/2020_21/CAT/notes/notes.tex
@@ -1133,11 +1133,11 @@
     Let $I$ be a poset. Then for each $i\in I$ we define 
     the upper set above $i$ as
     \begin{align*}
-        \uparrow(i) = \{j\in I : i\leq j\}
+        \upset(i) \coloneqq \{j\in I : i\leq j\}
     \end{align*}
     and the lower set below $i$ as
     \begin{align*}
-        \downarrow(i) = \{j\in I : j\leq i\}.
+        \loset(i) \coloneqq \{j\in I : j\leq i\}.
     \end{align*}
 \end{definition}
 
