INF2-IADS: Fix typo

--- a/2020_21/INF2-IADS/notes/notes.tex
+++ b/2020_21/INF2-IADS/notes/notes.tex
@@ -902,7 +902,7 @@ Weaknesses:
 		e_A(i,j) := \abs{\frac{\p}{\p x} A}_{ij} + \abs{\frac{\p}{\p y} A}_{ij}
 	\end{align*}
 	where $\p/\p x$ and $\p/\p y$ are gradient functions defined in the image
-	processing context, e.g. by using the \emph{Sobal operators}
+	processing context, e.g. by using the \emph{Sobel operators}
 	\begin{align*}
 		\begin{bmatrix}
 			-1 & 0 & +1 \\
