--- a/2019_20/CAP/notes/notes.tex
+++ b/2019_20/CAP/notes/notes.tex
@@ -6,6 +6,7 @@
 \author{Franz Miltz}
 \date{28 May 2020}
 \maketitle
+Textbook: James Stewart, \emph{Essential Calculus: Early Transcendentals}, Second Edition
 \tableofcontents
 \pagebreak
 \section{Functions and models}
