--- a/2019_20/PPS/notes/notes.tex
+++ b/2019_20/PPS/notes/notes.tex
@@ -6,6 +6,7 @@
 \author{Franz Miltz}
 \date{May 28, 2020}
 \maketitle
+\noindent Textbook: M. Liebeck, \emph{A Concise Introduction to Pure Mathematics}, Fourth Edition
 \mkthms
 \tableofcontents
 \pagebreak
