--- a/2020_21/CAT/notes/notes.tex
+++ b/2020_21/CAT/notes/notes.tex
@@ -18,6 +18,7 @@
 \title{Category Theory}
 \author{Franz Miltz}
 \maketitle
+\noindent Textbook: Steve Awodey, \emph{Category Theory}
 \tableofcontents
 \pagebreak
 
