--- a/2020_21/FPM/algebra-notes/notes.tex
+++ b/2020_21/FPM/algebra-notes/notes.tex
@@ -6,6 +6,7 @@
 \title{Fundamentals of Pure Mathematics - Algebra (SEM4)}
 \author{Franz Miltz}
 \maketitle
+\noindent Textbook: C.R. Jordan \& D.A. Jordan, \emph{Groups}
 \tableofcontents
 \pagebreak
 
