--- a/2020_21/FPM/analysis-notes/notes.tex
+++ b/2020_21/FPM/analysis-notes/notes.tex
@@ -6,6 +6,7 @@
 \title{Fundamentals of Pure Mathematics - Analysis (SEM4)}
 \author{Franz Miltz}
 \maketitle
+\noindent K. A. Ross, \emph{Elementary Analysis}, Second Edition
 \tableofcontents
 \pagebreak
 
