--- a/2020_21/INF2C/notes/notes.tex
+++ b/2020_21/INF2C/notes/notes.tex
@@ -7,6 +7,7 @@
 \title{Introduction to Computer Systems (SEM3)}
 \author{Franz Miltz}
 \maketitle
+\noindent Textbook: D. A. Patterson \& J. L. Henessey, \emph{Computer Organization \& Design}
 \tableofcontents
 \pagebreak
 \section{Data Representation}
