--- a/2020_21/INF2D/notes/notes.tex
+++ b/2020_21/INF2D/notes/notes.tex
@@ -8,6 +8,7 @@
 \date{10 May 2021}
 \begin{document}
 \maketitle
+\noindent Textbook: S. Russel \& P. Norvig, \emph{Aritificial Intelligence: A Modern Approach}, Third Edition
 \tableofcontents
 \pagebreak
 
