--- a/2021_22/HANA/notes/notes.tex
+++ b/2021_22/HANA/notes/notes.tex
@@ -6,6 +6,7 @@
 \title{Honours Analysis (SEM5)}
 \author{Franz Miltz}
 \maketitle
+\noindent Textbook: W. Wade, \emph{An Introduction to Analysis}
 \tableofcontents
 \pagebreak
 
