--- a/2019_20/ILA/notes/notes.tex
+++ b/2019_20/ILA/notes/notes.tex
@@ -7,6 +7,7 @@
 \author{Franz Miltz}
 \date{December 01, 2019}
 \maketitle
+\noindent Textbook: D. Poole, \emph{Linear Algebra: A Modern Introduction}, Fourth Edition
 \tableofcontents
 \pagebreak
 \section{Vectors}
