--- a/2021_22/GEO/notes/notes.tex
+++ b/2021_22/GEO/notes/notes.tex
@@ -60,6 +60,18 @@
     \end{align*}
 \end{definition}
 
+\begin{definition}[Dual maps]
+    Let $V,W$ be a vector spaces over $K$ and $f:V\to W$ a linear map between them.
+    Then there exists a canonical linear map 
+    \begin{align*}
+        f^*:W^*\to V^*
+    \end{align*}
+    defined by
+    \begin{align*}
+        \left(f^*(\beta)\right)(\vec v) = \beta(f(\vec v)), \hs\text{for all } \beta\in W^*,\vec v\in V.
+    \end{align*}
+\end{definition}
+
 \begin{definition}
     A \emph{bilinear form} of a vector space $V$ over $K$ is a map
     \begin{align*}
